

                              Kiji Schema Release Notes

Version 1.1.0
  * SCHEMA-187. Allows decoding records with the writer schema when no
      specific record is available (ie. when there is no reader schema).
  * SCHEMA-324. bin/kiji supports loading Hadoop distro-specific dependencies
      by inferring from "bin/hadoop version" or $KIJI_HADOOP_DISTRO_VER.

Version 1.0.2
  * SCHEMA-317. Silence spurious warning about not using GenericOptionsParser.
  * SCHEMA-318. Fixes a bug when closing KijiBufferedWriters.
  * SCHEMA-306. Fixes a bug on KijiPager on fully-qualified columns.
      There is a known issue with the versions returned from a map family.
  * SCHEMA-314. Row filters constructors are being replaced with
      factory methods such Filters.and(...) and Filters.or(...).
  * SCHEMA-303. Allows proper serialization of row filters.
      Contributed by Jeff Kolesky (jeff.kolesky@gmail.com).
  * SCHEMA-304. Adds additional column filters.
  * SCHEMA-297. Adds KijiCell.equals() and .hashCode().

Version 1.0.1
  * SCHEMA-254. Adds cellList methods to KijiRowData.
  * SCHEMA-296. Adds hashCode and equals methods for Filters.

Version 1.0.0
  * SCHEMA-227. Fix get/scan behavior on tables with no families.
  * SCHEMA-284. Fix usage doc string for kiji scan --start-row/limit-row flags.
  * SCHEMA-37. Adds stability annotations to all classes.
  * SCHEMA-280. Removes deprecated close() method from KijiTable.  Use
      table.release().
  * SCHEMA-8. Adds Schema Table Tool for reading and writing to a KijiSchemaTable.
  * SCHEMA-115. KijiManagedHBaseTableName no longer manages names for SchemaV5
      tables.
  * SCHEMA-287. Suppress slf4j classpath warnings without modifying classpath.
  * SCHEMA-189. Adds KijiBufferedWriter.
  * SCHEMA-106. Move CellSpec to org.kiji.schema.layout and mark as Framework.

Version 1.0.0-rc5
  * SCHEMA-240. Composite key format support in all CLI tools.
  * SCHEMA-134. Hides KijiDataRequestValidator's constructor and