@@ -1,0 +1,40 @@
+/**
+ * (c) Copyright 2013 WibiData, Inc.
+ *
+ * See the NOTICE file distributed with this work for additional
+ * information regarding copyright ownership.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+{
+  name: "writer_schema",
+  keys_format: {'org.kiji.schema.avro.RowKeyFormat2': {encoding: "RAW"}},
+  locality_groups: [ {
+    name: "default",
+    in_memory: false,
+    max_versions: 1,
+    ttl_seconds: 7776000,
+    compression_type: "NONE",
+    families: [ {
+      name: "family",
+      columns: [ {
+        name: "qualifier",
+        column_schema: {type: "CLASS", value: "class.not.Found"}
+      }, {
+        name: "node",
+        column_schema: {type: "CLASS", value: "org.kiji.schema.avro.Node"}
+      } ]
+    } ]
+  } ],
+  version: "layout-1.1.0"
+}
